this is working fixing glossing and buttons

--- a/templates/index.html
+++ b/templates/index.html
@@ -15,7 +15,7 @@
       <!-- Connect & Manual Token Fallback -->
       <button id="btn-connect" class="btn-secondary">Connect OneDrive</button>
       <input type="text" id="manual-token" placeholder="Paste access token here" style="display:none; margin-top:0.5em; width:100%;">
-      <button id="btn-set-token" type="button" style="display:none; margin-top:0.5em; width:100%;">Use Pasted Token</button>
+      <button id="btn-set-token" class="btn-primary" type="button" style="display:none; margin-top:0.5em">Use Pasted Token</button>
 
       <form id="form-transcribe">
         <label for="action">Action</label>
