--- a/templates/index.html
+++ b/templates/index.html
@@ -162,6 +162,7 @@
       processBtn.style.display = "block";
       cancelBtn.style.display  = "none";
       localStorage.removeItem("job_id");
+      jobId = null;
     });
 
     // 3) Errors (including unexpected disconnects)
