--- a/templates/index.html
+++ b/templates/index.html
@@ -10,9 +10,9 @@
 </head>
 <body>
 <div class="container">
+  
   <div class="sidebar">
     <h2 class="title">Automatic workflow LeibnizDream</h2>
-
     <!-- Mode -->
     <div class="mode-selector">
       <label><input type="radio" name="mode" value="online" checked> Work Online</label>
@@ -33,7 +33,6 @@
     <div id="upload-ui" style="display:none; margin-top:1em;">
       <button id="btn-upload-folder" class="btn-secondary" type="button" style="margin-top:0.5em;">Select Folder</button>
       <input type="file" id="file-input" webkitdirectory directory multiple style="display:none;" />
-
     </div>
 
     <!-- Form -->
@@ -54,9 +53,9 @@
       </select>
 
       <label for="language">Source Language</label>
-      <input type="text" id="language" name="language" value="German" required>
+      <input type="text" id="language" name="language" required>
 
-      <button id="btn-process" class="btn-primary" type="button" disabled>Start</button>
+      <button id="btn-process" class="btn-primary" type="button">Start</button>
       <button id="btn-cancel" class="btn-secondary" type="button" hidden style="margin-left:0.5em;">Cancel</button>
 
       <div id="status" class="status"></div>
@@ -69,6 +68,7 @@
     <p class="logo-text">LeibnizDream</p>
     <pre id="logs"></pre>
   </div>
+
 </div>
 <script src="{% static 'js/transcribe.js' %}"></script>
 </body>
