added version tag

--- a/templates/index.html
+++ b/templates/index.html
@@ -69,6 +69,7 @@
     <pre id="logs"></pre>
   </div>
 
+<div class="app-version" style="position:fixed; bottom:0.5rem; right:0.5rem; z-index:1000;">v{{ app_version }} </div>
 </div>
 <script src="{% static 'js/transcribe.js' %}"></script>
 </body>
