this is working better i need to fix first authentication

--- a/templates/index.html
+++ b/templates/index.html
@@ -58,7 +58,7 @@
       <button id="btn-process" class="btn-primary" type="button">Start</button>
       <button id="btn-cancel" class="btn-secondary" type="button" hidden style="margin-left:0.5em;">Cancel</button>
 
-      <div id="status" class="status"></div>
+      <div id="status" class="status">Not connected to OneDrive</div>
       <progress id="upload-progress" value="0" max="100" style="display:none; width:100%;"></progress>
     </form>
   </div>
