fixing access token

--- a/templates/auth_success.html
+++ b/templates/auth_success.html
@@ -65,10 +65,9 @@
   <script>
   const token = "{{ token }}";
 
-  localStorage.setItem('msal_token', token);
+  localStorage.setItem('access_token', token);
   const copyBtn = document.getElementById('copy-btn');
   const statusEl = document.getElementById('copy-status');
-  console.log('Access token:', token);
   copyBtn.addEventListener('click', () => {
     navigator.clipboard.writeText(token)
       .then(() => {
