--- a/templates/index.html
+++ b/templates/index.html
@@ -71,7 +71,6 @@
 
 <div class="app-version" style="position:fixed; bottom:0.5rem; right:0.5rem; z-index:1000;">v{{ app_version }} </div>
 </div>
-<script src="{% static 'js/authenticate.js' %}"></script>
-<script src="{% static 'js/transcribe.js' %}"></script>
+<script type="module" src="{% static 'js/main.js' %}"></script>
 </body>
 </html>
