--- a/templates/index.html
+++ b/templates/index.html
@@ -22,6 +22,7 @@
     <!-- Online -->
     <div id="online-ui">
       <button id="btn-connect" class="btn-secondary">Connect OneDrive</button>
+      <button id="btn-logout" class="btn-secondary" style="display:none;">Logout</button>
       <input type="text" id="manual-token" placeholder="Paste access token here" style="display:none; width:100%;">
       <button id="btn-set-token" class="btn-primary" style="display:none;">Use Token</button>
 
