--- a/tgt/templates/index.html
+++ b/tgt/templates/index.html
@@ -4,7 +4,6 @@
   <meta charset="UTF-8">
   <title>Transcription App</title>
   <link rel="stylesheet" href="/static/css/gui.css">
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/jszip/3.7.1/jszip.min.js"></script>
 </head>
 <body>
   <div class="container">
@@ -63,7 +62,7 @@
     </div>
 
     <div class="main">
-      <img src="/static/zas_logo.jpg" alt="Logo" class="logo">
+      <img src="/static/images/zas_logo.jpg" alt="Logo" class="logo">
       <p class="logo-text">LeibnizDream</p>
       <pre id="logs"></pre>
     </div>
